--- a/src/list.html
+++ b/src/list.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>list page</title>
+    <style>
+      td {
+        border: solid 1px black;
+        box-sizing: border-box;
+        text-align: center;
+      }
+      th {
+        border: solid 3px black;
+        box-sizing: border-box;
+        background-color: gray;
+      }
+    </style>
   </head>
   <body>
     <table style="width: 100%">
@@ -12,21 +24,28 @@
       <tr>
         <th>삭제</th>
         <th>수정</th>
-        <!-- <th>아이디</th> -->
+        <th>아이디</th>
         <th>이름</th>
         <th>전화번호</th>
         <th>시리즈</th>
       </tr>
       <% data.forEach(function(el, index){ %>
       <tr>
-        <td>
-          <button type="reset">삭제</button>
-        </td>
+        <!-- post 방식 삭제 -->
+        <!-- <form action="/delete" method="post"> -->
+        <!-- <td>
+            <button type="submit">삭제</sbutton>
+          </td> -->
+
+        <!-- get 방식 삭제 -->
+        <td><a href="/delete/<%=el.id %>">삭제</a></td>
         <td>수정</td>
-        <!-- <td><%=el.id %></td> -->
+        <td><%=el.id %></td>
         <td><%=el.name %></td>
         <td><%=el.number %></td>
         <td><%=el.series %></td>
+        <!-- <input type="hidden" value="<%=el.id %>" name="id" /> -->
+        <!-- </form> -->
       </tr>
       <% }); %>
     </table>
