--- a/src/list.html
+++ b/src/list.html
@@ -39,7 +39,7 @@
 
         <!-- get 방식 삭제 -->
         <td><a href="/delete/<%=el.id %>">삭제</a></td>
-        <td>수정</td>
+        <td><a href="/edit/<%=el.id %>">수정</a></td>
         <td><%=el.id %></td>
         <td><%=el.name %></td>
         <td><%=el.number %></td>
