--- a/20220728/page.html
+++ b/20220728/page.html
@@ -82,8 +82,9 @@
       </div>
       <div id="main">
         <select id="rooms">
-          <option value="병아리 방">병아리 방</option>
-          <option value="개구리 방">개구리 방</option>
+          <option value="디랜디 방">디랜디 방</option>
+          <option value="원랜디 방">원랜디 방</option>
+          <option value="나랜디 방">나랜디 방</option>
         </select>
         <ul id="message"></ul>
         <div id="send">
